apps/authelia/statefulset-authelia.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: authelia
  name: authelia
  labels:
    app.kubernetes.io/name: authelia
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: authelia
  minReadySeconds: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: authelia
    spec:
      automountServiceAccountToken: false
      hostNetwork: false
      hostPID: false
      hostIPC: false
      enableServiceLinks: false
      containers:
        - name: authelia
          image: ghcr.io/authelia/authelia:4.38.18@sha256:a5e6fa4b1dbdc296f80f9175157b145a0598690ec8cd4d6e105cd4498fe0c731
          imagePullPolicy: Always
          command: ["authelia"]
          resources:
            limits:
              cpu: 500m
              # https://www.authelia.com/integration/kubernetes/introduction/#ram-usage
              memory: 1500M
            requests:
              cpu: 10m
              memory: 1G
          startupProbe:
            failureThreshold: 6
            httpGet:
              path: /api/health
              port: http
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 5
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /api/health
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /api/health
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 5
          ports:
            - name: http
              containerPort: 9091
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - "ALL"
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /storage
              name: storage
            - mountPath: /configuration.yaml
              name: config
              readOnly: true
              subPath: configuration.yaml
            - mountPath: /users.yaml
              name: config
              readOnly: true
              subPath: users.yaml
            - mountPath: /secrets/internal
              name: secrets
              readOnly: true
      securityContext:
        fsGroup: 10912
        runAsNonRoot: true
        runAsUser: 10912
        runAsGroup: 10912
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: storage
          emptyDir: {}
        - name: config
          configMap:
            name: authelia
        - name: secrets
          secret:
            secretName: authelia
