apps/authelia/service-authelia.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: authelia
  name: authelia
  labels:
    app.kubernetes.io/name: authelia
    app.kubernetes.io/instance: authelia
spec:
  type: ClusterIP
  sessionAffinity: None
  selector:
    app.kubernetes.io/name: authelia
    app.kubernetes.io/instance: authelia
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
