apps/authelia/httproute-authelia.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authelia
  namespace: authelia
  labels:
    app.kubernetes.io/name: authelia
spec:
  parentRefs:
    - namespace: gateway
      name: jdmarble-net
  hostnames:
    - "auth.jdmarble.net"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: authelia
          port: 80
